--- a/CookBook/Web.Core/Web.Core.csproj
+++ b/CookBook/Web.Core/Web.Core.csproj
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data.AppContext\Data.AppContext.csproj" />
+    <ProjectReference Include="..\Logic.CookBook\Logic.CookBook.csproj" />
+    <ProjectReference Include="..\Web.Shared\Web.Shared.csproj" />
   </ItemGroup>
 
 </Project>
