--- a/CookBook/Web.BlazorCore/Web.BlazorCore/Web.BlazorCore.csproj
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore/Web.BlazorCore.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Service.CookBook\Service.CookBook.csproj" />
+    <ProjectReference Include="..\..\Web.Components\Web.Components.csproj" />
     <ProjectReference Include="..\..\Web.Shared\Web.Shared.csproj" />
     <ProjectReference Include="..\Web.BlazorCore.Client\Web.BlazorCore.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.2" />
